--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>覺得厲害</h1>
-  </body>
-</html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>小明程式碼測試網頁</title>
+	<style>
+	{
+		box-sizing: border-box;
+	}
+	/* Set additional styling options for the columns*/
+	.column {
+		float: left;
+		width: 50%;
+	}
+
+	.row:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+
+</style>
+
+
+</head>
+
+<body>
+	
+	<center>
+		<h1>小明程式碼測試網頁</h1>
+		<div class="row">
+			<div class="column" style="background-color:#097F8C;">
+				<img src="Product1.JPG" width="300" height="300" style="object-fit:cover;">
+				<h2>Product 1</h2>
+				<a href="Product1.html">Button 1</a> 
+			</div>
+			<div class="column" style="background-color:#EFB7E7;">
+				<img src="Product2.JPG" width="300" height="300" style="object-fit:cover;">
+				<h2>Product 2</h2>
+				<a href="Product2.html">Button 2</a> 
+			</div>
+		</div>
+		<div class="row">
+			<div class="column" style="background-color:#862D23;">
+				<img src="Product3.JPG" width="300" height="300" style="object-fit:cover;">
+				<h2>Product 3</h2>
+				<a href="Product3.html">Button 3</a> 
+			</div>
+			<div class="column" style="background-color:#FFF894;">
+				<img src="Product4.JPG" width="300" height="300" style="object-fit:cover;">
+				<h2>Product 4</h2>
+				<a href="Product4.html">Button 4</a> 
+			</div>
+		</div>
+	</center>
+</body>
+
+</html> 
