--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 		<h1>小明程式碼測試網頁</h1>
 		<div class="row">
 			<div class="column" style="background-color:#CA8EFF;">
-			<img src="風花雪月.PNG" width="500" height="500" style="object-fit:cover;">	
+			<img src="https://alkalwater.github.io/%E9%A2%A8%E8%8A%B1%E9%9B%AA%E6%9C%88.png" width="500" height="500" style="object-fit:cover;">	
 				<h2>風花雪月</h2>
 				<a href="https://www.youtube.com/watch?v=eRF4bQb71Ao" target="_blank">主題曲</a> 
 			</div>
 			<div class="column" style="background-color:#EFB7E7;">
-			<img src="黑鷲.PNG" width="283" height="500" style="object-fit:cover;">	
+			<img src="https://alkalwater.github.io/%E9%BB%91%E9%B7%B2.png" width="283" height="500" style="object-fit:cover;">	
 				<h2>黑鷲學級</h2>
 				<a href="https://www.youtube.com/watch?v=eRF4bQb71Ao" target="_blank">又是主題曲</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="column" style="background-color:#A6FFFF;">
-			<img src="青獅.PNG" width="283" height="500" style="object-fit:cover;">		
+			<img src="https://alkalwater.github.io/%E9%9D%92%E7%8D%85.png" width="283" height="500" style="object-fit:cover;">		
 				<h2>青獅學級</h2>
 				<a href="https://www.youtube.com/watch?v=eRF4bQb71Ao" target="_blank">還是主題曲</a> 
 			</div>
 			<div class="column" style="background-color:#FFF894;">
-			<img src="金鹿.PNG" width="283" height="500" style="object-fit:cover;">	
+			<img src="https://alkalwater.github.io/%E9%87%91%E9%B9%BF.png" width="283" height="500" style="object-fit:cover;">	
 				<h2>金鹿學級</h2>
 				<a href="https://www.youtube.com/watch?v=eRF4bQb71Ao" target="_blank">就是逼你聽主題曲</a> 
 			</div>
