--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <!doctype html>
 <html lang="zh-TW">
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204989605-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-204989605-1');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NM2BD9V');</script>
+<!-- End Google Tag Manager -->
+
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="profile" href="https://gmpg.org/xfn/11" />
@@ -113,9 +113,10 @@ img.emoji {
 	</head>
 
 <body class="page-template-default page page-id-6 logged-in admin-bar no-customize-support wp-embed-responsive customizer-styles-applied singular image-filters-enabled hide-homepage-title mobile-nav-side has-marketing-bar has-marketing-bar-theme-hever highlander-enabled highlander-light">
-
-	
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NM2BD9V"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	
 <script type="text/javascript">
 /* <![CDATA[ */
@@ -526,54 +527,6 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
 	
 }
 </script>
-<script>
 
-function gtag_event() {
-var flag_1=false;
-var flag_2=false;
-var flag_3=false;
-var flag_4=false;
-var flag_5=false;
-var flag_6=false;
-var flag_7=false;
-var flag_8=false;
-var flag_9=false;
-var flag_10=false;
-
-jQuery(window).scroll(function() {
-if (jQuery(this).scrollTop() > jQuery(document).height()*0.1 && !flag_1) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '10%','non_interaction': true});
-flag_1=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.2 && !flag_2) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '20%','non_interaction': true});
-flag_2=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.3 && !flag_3) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '30%','non_interaction': true});
-flag_3=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.4 && !flag_4) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '40%','non_interaction': true});
-flag_4=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.5 && !flag_5) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '50%','non_interaction': true});
-flag_5=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.6 && !flag_6) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '60%','non_interaction': true});
-flag_6=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.7 && !flag_7) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '70%','non_interaction': true});
-flag_7=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.8 && !flag_8) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '80%','non_interaction': true});
-flag_8=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*0.9 && !flag_9) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '90%','non_interaction': true});
-flag_9=true;
-} else if (jQuery(this).scrollTop() > jQuery(document).height()*1 && !flag_10) {
-gtag('event', 'Usability', {'event_category': 'Scroll','event_label': '100%','non_interaction': true});
-flag_10=true;
-
-}});}jQuery(document).ready(function(){gtag_event();});
-
-</script>
 </body>
 </html>
