加入mega元素+修改標題

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
-<title>K's Tracking Test</title>
+<title>CYBERIDOL -《底特律：變人》同人小說</title>
+<meta name="title" content="CYBERIDOL -《底特律：變人》同人小說">
+<meta name="description" content="這是一篇以知名電玩遊戲《底特律：變人》世界觀進行二次創作的極短篇小說">
+<meta name="keywords" content="PS4,遊戲,底特律,變人,Detroit,BecomeHuman,二創,同人,小說,互動式電影,冒險,劇情,仿生人,AI">
 <style>
 /* ###實驗下一列### */
 
