--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-hant-TW">
+html{font-size: 14px;}.rwdtxt {font-size: 1.2rem;}
 <head>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -32,11 +33,11 @@ a:active {color:#2894FF;}  /* 設定上點擊過的連結樣式 */
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div style="border:1px #FFB326 solid;padding:80px;margin:20px 20px 20px 20px">
-<div style="letter-spacing:2px;"><center><p><font face="Noto Sans TC"><font size="5"><font color="#00CACA"><b>CYBERIDOL</b></font></font></p></center></div>
+<div style="letter-spacing:2px;"><center><p class="rwdtxt"><font face="Noto Sans TC"><font size=1.5rem><font color="#00CACA"><b>CYBERIDOL</b></font></font></p></center></div>
 <font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font>
 <center><p><br></p></center>
 <font color="#3C3C3C">
-<p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
+<p class="rwdtxt"><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
 <p><br>隨著在家事、教育、醫療、體育、軍事……等各領域的應用逐漸普及化，日本與韓國兩大東亞據點幾乎同時將腦筋動到演藝／娛樂產業。公元2036年，世界第一支仿生人女子偶像團體——CyberIdol——正式於東京出道。</p>
 <p><br>發行首張單曲、舉辦首場演唱會、握手會後，聲勢迅速飆漲。問卷調查顯示，「不會生病、不會脫序，只有微笑」的特點讓人們追偶像更輕鬆了：「我不用擔心喜歡的成員突然罷工、突然愛上哪個該死的傢伙。」在接下來的一年內陸續誕生三、四組姊妹團體。韓國亦不遑多讓，甚至提出與日本的跨海合作計劃。雖不時也有懷念舊時代的聲音表示「仿生人偶像的笑容不是真心的，因為根本沒有心」、「它們每個舉動、說的每句話，都只是在執行程式」，但顯然不在乎的人仍佔多數。</p>
 <p><br>原以為，這一切會就這樣順利、相安無事地發展下去。直到最近，愈來愈多的仿生人出現失蹤、自毀、拒絕服從、暴力及其他不可預知的脫序行為，模控生命創辦人尚未出面回應，卻已私下派出調查型仿生人協助各地警察深入瞭解狀況。</p>
