--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ a:active {color:#2894FF;}  /* 設定上點擊過的連結樣式 */
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div style="border:1px #FFB326 solid;padding:80px;margin:20px 20px 20px 20px">
-<div style="letter-spacing:2px;"><center><p><font face="Noto Sans TC"><font size=6.5vh><font color="#00CACA"><b>CYBERIDOL</b></font></font></p></center></div>
-<font size=5vh><font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font></font>
+<div style="letter-spacing:2px;"><center><p><font face="Noto Sans TC"><font size=6.5vw><font color="#00CACA"><b>CYBERIDOL</b></font></font></p></center></div>
+<font size=5vw><font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font></font>
 <center><p><br></p></center>
-<font size=4.5vh><font color="#3C3C3C">
+<font size=4.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
 <p><br>隨著在家事、教育、醫療、體育、軍事……等各領域的應用逐漸普及化，日本與韓國兩大東亞據點幾乎同時將腦筋動到演藝／娛樂產業。公元2036年，世界第一支仿生人女子偶像團體——CyberIdol——正式於東京出道。</p>
 <p><br>發行首張單曲、舉辦首場演唱會、握手會後，聲勢迅速飆漲。問卷調查顯示，「不會生病、不會脫序，只有微笑」的特點讓人們追偶像更輕鬆了：「我不用擔心喜歡的成員突然罷工、突然愛上哪個該死的傢伙。」在接下來的一年內陸續誕生三、四組姊妹團體。韓國亦不遑多讓，甚至提出與日本的跨海合作計劃。雖不時也有懷念舊時代的聲音表示「仿生人偶像的笑容不是真心的，因為根本沒有心」、「它們每個舉動、說的每句話，都只是在執行程式」，但顯然不在乎的人仍佔多數。</p>
