--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div style="letter-spacing:2px;"><center><p><font face="Noto Sans TC"><font size=6.5vw><font color="#00CACA"><b>CYBERIDOL</b></font></font></p></center></div>
 <font size=5.5vw><font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font></font>
 <center><p><br></p></center>
+
+/* 嵌入式圖片 */
+<a id='aU6vqV1URghOiGkB7Znbpg' class='gie-single' href='http://www.gettyimages.hk/detail/1184828250' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a>
+<script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'aU6vqV1URghOiGkB7Znbpg',sig:'ZXxQAY5d8MuXtFPOb011Ay9d-Gr66RcgFYyPpcbyhEM=',w:'542px',h:'318px',items:'1184828250',caption: true ,tld:'hk',is360: false })});</script>
+<script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
 <p><br>隨著在家事、教育、醫療、體育、軍事……等各領域的應用逐漸普及化，日本與韓國兩大東亞據點幾乎同時將腦筋動到演藝／娛樂產業。公元2036年，世界第一支仿生人女子偶像團體——CyberIdol——正式於東京出道。</p>
