--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <center><p><br></p></center>
 
 /* 嵌入式圖片 */
-<a id='aU6vqV1URghOiGkB7Znbpg' class='gie-single' href='http://www.gettyimages.hk/detail/1184828250' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a>
-<script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'aU6vqV1URghOiGkB7Znbpg',sig:'ZXxQAY5d8MuXtFPOb011Ay9d-Gr66RcgFYyPpcbyhEM=',w:'542px',h:'318px',items:'1184828250',caption: true ,tld:'hk',is360: false })});</script>
-<script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+<div class="getty embed image" style="background-color:#fff;display:inline-block;font-family:Roboto,sans-serif;color:#a7a7a7;font-size:11px;width:100%;max-width:542px;"><div style="padding:0;margin:0;text-align:left;">
+<a href="http://www.gettyimages.hk/detail/1184828250" target="_blank" style="color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;">Embed from Getty Images</a>
+</div>
+<div style="overflow:hidden;position:relative;height:0;padding:58.67159% 0 0 0;width:100%;">
+<iframe src="//embed.gettyimages.com/embed/1184828250?et=wPxtrH-0SO5YfWiXY1Do7w&tld=hk&sig=obbv8KJmFXsHRO_6XrcKUd4TMarxcaoE9v2zYbnB7ag=&caption=false&ver=1" scrolling="no" frameborder="0" width="542" height="318" style="display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;"></iframe>
+</div>
+</div>
 
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
