--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <font size=5.5vw><font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font></font>
 <center><p><br></p></center>
 
-/* 嵌入式圖片 */
-<div class="getty embed image" style="background-color:#fff;display:inline-block;font-family:Roboto,sans-serif;color:#a7a7a7;font-size:11px;width:100%;max-width:542px;"><div style="padding:0;margin:0;text-align:left;">
+<!-- 內嵌式圖片 -->
+<center><div class="getty embed image" style="background-color:#fff;display:inline-block;font-family:Roboto,sans-serif;color:#a7a7a7;font-size:11px;width:100%;max-width:542px;"><div style="padding:0;margin:0;text-align:left;">
 <a href="http://www.gettyimages.hk/detail/1184828250" target="_blank" style="color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;">Embed from Getty Images</a>
 </div>
 <div style="overflow:hidden;position:relative;height:0;padding:58.67159% 0 0 0;width:100%;">
 <iframe src="//embed.gettyimages.com/embed/1184828250?et=wPxtrH-0SO5YfWiXY1Do7w&tld=hk&sig=obbv8KJmFXsHRO_6XrcKUd4TMarxcaoE9v2zYbnB7ag=&caption=false&ver=1" scrolling="no" frameborder="0" width="542" height="318" style="display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;"></iframe>
 </div>
 </div>
+</center>
+<!-- End 內嵌式圖片 -->
 
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
