--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <center><p><br></p></center>
 
 <!-- 圖片 -->
-<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" max-width=600px alt="攝影師：Rostislav Uzunov"></center>
+<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=50vw alt="攝影師：Rostislav Uzunov"></center>
 <!-- End 圖片 -->
 
 <font size=5.5vw><font color="#3C3C3C">
