--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <font size=5.5vw><font color="#B15BFF"><center><p><br>#仿生人 #偶像 #底特律變人 #DetroitBecomeHuman</p></center></font></font>
 <center><p><br></p></center>
 
-<!-- 圖片 -->
-<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw alt="攝影師：Rostislav Uzunov"></center>
-<!-- End 圖片 -->
+<!-- 圖片及來源 -->
+<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw></center>
+<center><p><font face="Noto Sans TC"><font size=2vw><font color="#6C6C6C">攝影師：
+  <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
+  連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p></center>
+<!-- End 圖片及來源 -->
 
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
