--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <title>CYBERIDOL -《底特律：變人》同人小說</title>
 <meta name="title" content="CYBERIDOL -《底特律：變人》同人小說">
 <meta name="description" content="這是一篇以知名電玩遊戲《底特律：變人》世界觀進行二次創作的極短篇小說">
-<meta name="keywords" content="PS4,遊戲,底特律,變人,Detroit,BecomeHuman,二創,同人,小說,互動式電影,冒險,劇情,仿生人,AI">
+<meta name="keywords" content="Cyber,Idol,PS4,遊戲,底特律,變人,Detroit,BecomeHuman,二創,同人,小說,互動式電影,冒險,劇情,仿生人,AI">
 <style>
 
 a:link {color:#2894FF;}    /* 設定尚未點閱過的連結樣式 */
