--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div style="border:1px #FFB326 none;padding:80px;margin:20px 20px 20px 20px">
 <div style="letter-spacing:2px;"><center><p><font face="Permanent Marker"><font size=7.5vw><font color="#005AB5">CYBERIDOL</font></font></font></p></center></div>
-<font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#2894FF">#偶像</font> <font color="#46A3FF">#底特律變人</font> <font color="#66B3FF">#DetroitBecomeHuman</font></p></center></font>
+<font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#FF60AF">#偶像</font> <font color="#0080FF"">#底特律變人</font> <font color="#FF60AF">#DetroitBecomeHuman</font></p></center></font>
 <center><p><br></p></center>
 
 
