--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@1,500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   
 <meta charset="UTF-8">
 <title>CYBERIDOL -《底特律：變人》同人小說</title>
@@ -37,7 +37,7 @@ a:active {color:#2894FF;}  /* 設定上點擊過的連結樣式 */
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div style="border:1px #FFB326 none;padding:80px;margin:20px 20px 20px 20px">
-<div style="letter-spacing:2px;"><center><p><font face="Permanent Marker"><font size=7.5vw><font color="#005AB5">CYBERIDOL</font></font></font></p></center></div>
+<div style="letter-spacing:2px;"><center><p><font face="DotGothic16"><font size=7.5vw><font color="#005AB5">サイバーアイドル</font></font></font></p></center></div>
 <font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#FF60AF">#偶像</font> <font color="#0080FF"">#底特律變人</font> <font color="#FF60AF">#DetroitBecomeHuman</font></p></center></font>
 <center><p><br></p></center>
 
