--- a/index.html
+++ b/index.html
@@ -43,19 +43,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- 圖片及來源 -->
-<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw></center>
+<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw top:0 left:0 right:0 bottom:0 margin:auto></center>
 <center><p><font size=2vw><font color="#6C6C6C">攝影師：
   <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
   連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p></center>
-
-img {
-    max-width:100%;
-    max-height:100%;
-    position:absolute;
-    top:0; left:0; right:0; bottom:0;
-    margin:auto;
-}
-  
 <!-- End 圖片及來源 -->
 
 <font size=5.5vw><font color="#3C3C3C">
