--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- 圖片及來源 -->
 <div style="border:1px #FFB326 none;padding:5px;margin:20px;text-align:center;">
-<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg"></center>
-<center><p><font size=2vw><font color="#6C6C6C">攝影師：
+<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" >
+<p><font size=2vw><font color="#6C6C6C">攝影師：
   <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
-  連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p></center>
+  連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p>
 </div>
 <!-- End 圖片及來源 -->
 
