--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#FF60AF">#偶像</font> <font color="#0080FF"">#底特律變人</font> <font color="#FF60AF">#DetroitBecomeHuman</font></p></center></font>
 <center><p><br></p></center>
 
-
+<!-- CSS -->  
+<style type="text/css">
+.div {background-size: contain;}
+div {
+width: 500vw;
+border: 1px none;
+background-repeat: no-repeat;
+background-size: contain;
+background-position: center;
+}
+    .div1 {
+        background-image: url(https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg);
+</style>  
+<!-- End CSS --> 
+  
 <!-- 圖片及來源 -->
 <div style="border:1px #FFB326 none;margin:1px;text-align:center;">
 <img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw>
