--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <style type="text/css">
 .div {background-size: contain;}
 div {
-width: 500vw;
+width: 500px;
 border: 1px none;
 background-repeat: no-repeat;
 background-size: contain;
