--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <style type="text/css">
 .div {background-size: contain;}
 div {
-width: 500px;
+width: 100vw;
 border: 1px none;
 background-repeat: no-repeat;
 background-size: contain;
 background-position: center;
 }
     .div1 {
-        background-image: url(https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg);
+        background-image: url(./pexels-rostislav-uzunov-5011647.jpg);
 </style>  
 <!-- End CSS --> 
   
