--- a/index.html
+++ b/index.html
@@ -43,16 +43,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- CSS -->  
 <style type="text/css">
-.div {background-size: contain;}
-div {
-width: 100vw;
-border: 1px none;
-background-repeat: no-repeat;
-background-size: contain;
-background-position: center;
-}
-    .div1 {
-        background-image: url(./pexels-rostislav-uzunov-5011647.jpg);
+<div class='div1'>
+        <img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" alt="">
+    </div>
+  .div1 {
+        width:500px;
+        border:1px none;
+        display: table-cell;
+        vertical-align: middle;
+    }
+    .div1 img  {
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+        margin: auto;
+    }
 </style>  
 <!-- End CSS --> 
   
