--- a/index.html
+++ b/index.html
@@ -43,27 +43,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- CSS -->  
 <style type="text/css">
-<div class='div1'>
-        <img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" alt="">
-    </div>
-  .div1 {
-        width:500px;
-        border:1px none;
-        display: table-cell;
-        vertical-align: middle;
-    }
-    .div1 img  {
-        max-width: 100%;
-        max-height: 100%;
-        display: block;
-        margin: auto;
-    }
-</style>  
+
 <!-- End CSS --> 
   
 <!-- 圖片及來源 -->
 <div style="border:1px #FFB326 none;margin:1px;text-align:center;">
-<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" width=500vw>
+<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" class="center" width=500vw >
 <p><font size=2vw><font color="#6C6C6C">攝影師：
   <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
   連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p>
