--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@ a:active {color:#2894FF;}  /* 設定上點擊過的連結樣式 */
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NM2BD9V"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<div style="border:1px #FFB326 none;padding:60px 80px">
+<div style="border:1px #FFB326 none;padding:60px 100px">
 <div style="letter-spacing:2px;"><center><p><font face="DotGothic16"><font size=7.5vw><font color="#005AB5"><b>サイバーアイドル</b></font></font></font></p></center></div>
 <font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#FF60AF">#偶像</font> <font color="#0080FF"">#底特律變人</font> <font color="#FF60AF">#DetroitBecomeHuman</font></p></center></font>
 <center><p><br></p></center>
   
 <!-- 圖片及來源 -->
 <div style="border:1px #FFB326 none;margin:1px;text-align:center;">
-<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" class="center" width=50% >
+<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" class="center" width=50rem >
 <p><font size=2vw><font color="#6C6C6C">攝影師：
   <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
   連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p>
