--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div style="border:1px #FFB326 none;padding:60px 100px">
 <div style="letter-spacing:2px;"><center><p><font face="DotGothic16"><font size=7.5vw><font color="#005AB5"><b>サイバーアイドル</b></font></font></font></p></center></div>
 <font face="Noto Sans TC"><font size=5.5vw><center><p><br><font color="#0080FF">#仿生人</font> <font color="#FF60AF">#偶像</font> <font color="#0080FF"">#底特律變人</font> <font color="#FF60AF">#DetroitBecomeHuman</font></p></center></font>
-<center><p><br></p></center>
+</div>
   
 <!-- 圖片及來源 -->
-<div style="border:1px #FFB326 none;margin:1px;text-align:center;">
-<img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" class="center" width=500rem >
-<p><font size=2vw><font color="#6C6C6C">攝影師：
+
+<center><img src="https://alkalwater.github.io/pexels-rostislav-uzunov-5011647.jpg" class="center" width=500vw ></center>
+<center><p><font size=2vw><font color="#6C6C6C">攝影師：
   <a href="https://www.pexels.com/zh-tw/@rostislav-uzunov-3145660?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Rostislav Uzunov</a>，
   連結：<a href="https://www.pexels.com/zh-tw/photo/cgi-5011647/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="_blank">Pexels</a></font></font></p>
-</div>
+  </center>
+  
 <!-- End 圖片及來源 -->
 
+<div style="border:1px #FFB326 none;padding:60px 100px">
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
 <p><br>隨著在家事、教育、醫療、體育、軍事……等各領域的應用逐漸普及化，日本與韓國兩大東亞據點幾乎同時將腦筋動到演藝／娛樂產業。公元2036年，世界第一支仿生人女子偶像團體——CyberIdol——正式於東京出道。</p>
