--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
 <!-- End 圖片及來源 -->
 
-<div style="border:1px #FFB326 none;padding:10x 100px 60px 100px">
+<div style="border:1px #FFB326 none;padding:10px 100px 60px 100px">
 <font size=5.5vw><font color="#3C3C3C">
 <p><br>市值將近萬億美元、總部位於美國底特律的模控生命CyberLife，自公元2018年創立至今，於世界各地皆有據點，定期發佈、銷售新仿生人機種。</p>
 <p><br>隨著在家事、教育、醫療、體育、軍事……等各領域的應用逐漸普及化，日本與韓國兩大東亞據點幾乎同時將腦筋動到演藝／娛樂產業。公元2036年，世界第一支仿生人女子偶像團體——CyberIdol——正式於東京出道。</p>
